--- a/FUELeesin.csproj
+++ b/FUELeesin.csproj
@@ -65,6 +65,7 @@
     <Compile Include="DamageIndicator.cs" />
     <Compile Include="DrawingsManager.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="Geo.cs" />
     <Compile Include="Geometry.cs" />
     <Compile Include="Menus.cs" />
     <Compile Include="Modes\Active.cs" />
@@ -79,6 +80,7 @@
     <Compile Include="Modes\WardJump.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Smite.cs" />
     <Compile Include="SpellsManager.cs" />
   </ItemGroup>
   <ItemGroup>
